# UConn-DAC-2023

./: .gitignore  README.md  coco.yaml  dac_sdc.ipynb  dataset.py  environment.yml  loss.py  main.py  model.py  pyproject.toml  requirements.txt  score.py  shufflenetv2.py  testing.ipynb  train.py  yolo_onnx_preprocessing_utils.py  yolo_run_inference.py
utils/: datasets.py  evaluation_coco.py  tool.py
