[tool.poetry]
name = "embedded-inference"
version = "0.1.0"
description = ""
authors = ["charitarthchugh <37895518+charitarthchugh@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
fastapi = "^0.95.0"
onnxruntime = "^1.14.1"
wandb = "^0.14.1"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
