[tool.poetry]
name = "dac2023-gpu"
version = "0.1.0"
description = ""
authors = [
    "Charitarth Chugh <37895518+charitarthchugh@users.noreply.github.com>",
]
readme = "README.md"
# packages = [{ include = "dac2023_gpu" }]

[tool.poetry.dependencies]
python = "^3.8"
# torch = "^2.0.0"
albumentations = "^1.3.1"
torchsummary = "^1.5.1"
numpy = "^1.24.3"
pylabel = "^0.1.51"
pycocotools = "^2.0.6"
wandb = "^0.15.4"
ipykernel = "^6.23.1"
accelerate = "^0.20.3"
jupyter = "^1.0.0"
# torchvison = "^0.14.1"
torchvision = "^0.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
